Move from vite to nextjs

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,53 +4,54 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
+        "dev": "next dev",
+        "build": "next build",
         "lint": "biome check .",
-        "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build"
     },
     "dependencies": {
-        "@mantine/carousel": "^7.7.1",
-        "@mantine/core": "^7.7.1",
-        "@mantine/hooks": "^7.7.1",
-        "@tabler/icons-react": "^3.1.0",
+        "@mantine/carousel": "^7.8.0",
+        "@mantine/core": "^7.8.0",
+        "@mantine/hooks": "^7.8.0",
+        "@tabler/icons-react": "^3.2.0",
         "@tanstack/react-query": "5.29.0",
-        "@web3modal/wagmi": "^4.1.5",
-        "chessboardjsx": "^2.4.7",
+        "@web3modal/wagmi": "^4.1.7",
         "embla-carousel-react": "^7.1.0",
+        "encoding": "^0.1.13",
         "humanize-duration": "^3.32.0",
+        "next": "^14.2.0",
+        "pino-pretty": "^11.0.0",
         "react": "^18.2.0",
+        "react-chessboard": "^4.5.0",
         "react-dom": "^18.2.0",
         "react-typist-component": "^1.0.6",
-        "viem": "^2.9.12",
+        "viem": "^2.9.16",
         "wagmi": "^2.5.19"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.6.4",
-        "@storybook/addon-essentials": "^8.0.6",
-        "@storybook/addon-interactions": "^8.0.6",
-        "@storybook/addon-links": "^8.0.6",
+        "@storybook/addon-essentials": "^8.0.8",
+        "@storybook/addon-interactions": "^8.0.8",
+        "@storybook/addon-links": "^8.0.8",
         "@storybook/addon-styling-webpack": "^1.0.0",
-        "@storybook/blocks": "^8.0.6",
-        "@storybook/preview-api": "^8.0.6",
-        "@storybook/react": "^8.0.6",
-        "@storybook/react-vite": "^8.0.6",
-        "@storybook/test": "^8.0.6",
+        "@storybook/blocks": "^8.0.8",
+        "@storybook/preview-api": "^8.0.8",
+        "@storybook/react": "^8.0.8",
+        "@storybook/react-vite": "^8.0.8",
+        "@storybook/test": "^8.0.8",
         "@types/humanize-duration": "^3.27.4",
-        "@types/react": "^18.2.74",
-        "@types/react-dom": "^18.2.24",
-        "@vitejs/plugin-react": "^4.2.1",
+        "@types/node": "^20.12.7",
+        "@types/react": "^18.2.77",
+        "@types/react-dom": "^18.2.25",
         "@wagmi/cli": "^2.1.4",
         "buffer": "^6.0.3",
         "chess.js": "1.0.0-beta.8",
         "postcss": "^8.4.38",
-        "postcss-preset-mantine": "^1.13.0",
+        "postcss-preset-mantine": "^1.14.4",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.0.6",
+        "storybook": "^8.0.8",
         "storybook-dark-mode": "^4.0.1",
-        "typescript": "^5.4.4",
-        "vite": "^5.2.8"
+        "typescript": "^5.4.5"
     }
 }
