--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,13 +8,12 @@
         "react-internal.js"
     ],
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^7.13.0",
-        "@typescript-eslint/parser": "^7.13.0",
         "@vercel/style-guide": "^6.0.0",
-        "eslint": "8.57.0",
+        "eslint": "^9.4.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-config-turbo": "^1.13.3",
+        "eslint-config-turbo": "^2.0.3",
         "eslint-plugin-only-warn": "^1.1.0",
-        "typescript": "^5.4.5"
+        "typescript": "^5.4.5",
+        "typescript-eslint": "rc-v8"
     }
 }
