--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -2,6 +2,8 @@
     "formatter": {
         "enabled": true,
         "indentStyle": "space",
+        "indentWidth": 4,
+        "ignore": [".next/**", "dist/**"],
         "lineWidth": 120
     },
     "linter": {
