--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,45 +11,51 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
-        "@mantine/core": "^7.10.1",
-        "@mantine/hooks": "^7.10.1",
+        "@deroll/core": "^0.1.1",
+        "@mantine/core": "^7.10.2",
+        "@mantine/hooks": "^7.10.2",
+        "@onchess/core": "workspace:*",
+        "@reduxjs/toolkit": "^2.2.5",
         "@tabler/icons-react": "^3.5.0",
-        "@tanstack/react-query": "5.40.1",
-        "@web3modal/wagmi": "^4.2.3",
-        "embla-carousel-react": "^8.1.3",
+        "@tanstack/react-query": "5.45.0",
+        "@wagmi/core": "^2.11.2",
+        "@web3modal/wagmi": "^5.0.1",
+        "chess-fen": "^1.0.2",
+        "chess.js": "1.0.0-beta.8",
         "encoding": "^0.1.13",
         "humanize-duration": "^3.32.1",
-        "next": "^14.2.3",
-        "pino-pretty": "^11.2.0",
+        "next": "^14.2.4",
+        "pino-pretty": "^11.2.1",
         "react": "^18.3.1",
         "react-chessboard": "^4.6.0",
         "react-dom": "^18.3.1",
-        "react-typist-component": "^1.0.6",
-        "viem": "^2.13.8",
-        "wagmi": "^2.9.11"
+        "react-fen-chess-board": "^2.0.6",
+        "react-redux": "^9.1.2",
+        "viem": "^2.13.10",
+        "wagmi": "^2.10.2"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.8.1",
-        "@storybook/addon-essentials": "^8.1.6",
-        "@storybook/addon-interactions": "^8.1.6",
-        "@storybook/addon-links": "^8.1.6",
+        "@storybook/addon-essentials": "^8.1.8",
+        "@storybook/addon-interactions": "^8.1.8",
+        "@storybook/addon-links": "^8.1.8",
         "@storybook/addon-styling-webpack": "^1.0.0",
-        "@storybook/blocks": "^8.1.6",
-        "@storybook/preview-api": "^8.1.6",
-        "@storybook/react": "^8.1.6",
-        "@storybook/react-vite": "^8.1.6",
-        "@storybook/test": "^8.1.6",
+        "@storybook/blocks": "^8.1.8",
+        "@storybook/nextjs": "^8.1.8",
+        "@storybook/preview-api": "^8.1.8",
+        "@storybook/react": "^8.1.8",
+        "@storybook/react-vite": "^8.1.8",
+        "@storybook/test": "^8.1.8",
         "@types/humanize-duration": "^3.27.4",
         "@types/node": "^20.14.2",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "@wagmi/cli": "^2.1.8",
+        "@wagmi/cli": "^2.1.9",
         "buffer": "^6.0.3",
-        "chess.js": "1.0.0-beta.8",
         "postcss": "^8.4.38",
         "postcss-preset-mantine": "^1.15.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.1.6",
+        "storybook": "^8.1.8",
         "storybook-dark-mode": "^4.0.1",
         "typescript": "^5.4.5"
     }
