--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,10 +5,11 @@
     "type": "module",
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "run-p build:web build:storybook",
+        "build:web": "next build",
+        "build:storybook": "storybook build",
         "lint": "biome check .",
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
         "@deroll/core": "^0.1.1",
@@ -52,6 +53,7 @@
         "@types/react-dom": "^18.3.0",
         "@wagmi/cli": "^2.1.9",
         "buffer": "^6.0.3",
+        "npm-run-all": "^4.1.5",
         "postcss": "^8.4.38",
         "postcss-preset-mantine": "^1.15.0",
         "postcss-simple-vars": "^7.0.1",
