--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,11 @@
     "dependencies": {
         "@deroll/core": "^0.1.1",
         "@mantine/core": "^7.10.2",
+        "@mantine/form": "^7.10.2",
         "@mantine/hooks": "^7.10.2",
         "@onchess/core": "workspace:*",
         "@reduxjs/toolkit": "^2.2.5",
-        "@tabler/icons-react": "^3.5.0",
+        "@tabler/icons-react": "^3.6.0",
         "@tanstack/react-query": "5.45.0",
         "@wagmi/core": "^2.11.2",
         "@web3modal/wagmi": "^5.0.1",
@@ -32,32 +33,32 @@
         "react-dom": "^18.3.1",
         "react-fen-chess-board": "^2.0.6",
         "react-redux": "^9.1.2",
-        "viem": "^2.13.10",
+        "viem": "^2.14.0",
         "wagmi": "^2.10.2"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.8.1",
-        "@storybook/addon-essentials": "^8.1.8",
-        "@storybook/addon-interactions": "^8.1.8",
-        "@storybook/addon-links": "^8.1.8",
+        "@storybook/addon-essentials": "^8.1.9",
+        "@storybook/addon-interactions": "^8.1.9",
+        "@storybook/addon-links": "^8.1.9",
         "@storybook/addon-styling-webpack": "^1.0.0",
-        "@storybook/blocks": "^8.1.8",
-        "@storybook/nextjs": "^8.1.8",
-        "@storybook/preview-api": "^8.1.8",
-        "@storybook/react": "^8.1.8",
-        "@storybook/react-vite": "^8.1.8",
-        "@storybook/test": "^8.1.8",
+        "@storybook/blocks": "^8.1.9",
+        "@storybook/nextjs": "^8.1.9",
+        "@storybook/preview-api": "^8.1.9",
+        "@storybook/react": "^8.1.9",
+        "@storybook/react-vite": "^8.1.9",
+        "@storybook/test": "^8.1.9",
         "@types/humanize-duration": "^3.27.4",
         "@types/node": "^20.14.2",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "@wagmi/cli": "^2.1.9",
+        "@wagmi/cli": "^2.1.10",
         "buffer": "^6.0.3",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.38",
         "postcss-preset-mantine": "^1.15.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.1.8",
+        "storybook": "^8.1.9",
         "storybook-dark-mode": "^4.0.1",
         "typescript": "^5.4.5"
     }
