--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,14 +4,18 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "next dev",
-        "build": "run-p build:web build:storybook",
+        "build": "run-s codegen build:web build:storybook",
         "build:web": "next build",
         "build:storybook": "storybook build",
+        "codegen": "graphql-codegen",
+        "dev": "run-p dev:codegen dev:web",
+        "dev:codegen": "graphql-codegen -w",
+        "dev:web": "next dev",
         "lint": "biome check .",
         "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
+        "@apollo/client": "^3.10.5",
         "@deroll/core": "^0.1.1",
         "@mantine/core": "^7.10.2",
         "@mantine/form": "^7.10.2",
@@ -38,6 +42,9 @@
     },
     "devDependencies": {
         "@biomejs/biome": "^1.8.1",
+        "@graphql-codegen/cli": "^5.0.2",
+        "@graphql-codegen/client-preset": "^4.3.0",
+        "@graphql-typed-document-node/core": "^3.2.0",
         "@storybook/addon-essentials": "^8.1.9",
         "@storybook/addon-interactions": "^8.1.9",
         "@storybook/addon-links": "^8.1.9",
@@ -54,6 +61,7 @@
         "@types/react-dom": "^18.3.0",
         "@wagmi/cli": "^2.1.10",
         "buffer": "^6.0.3",
+        "graphql": "^16.8.2",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.38",
         "postcss-preset-mantine": "^1.15.0",
