--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,9 @@
         "build": "run-s codegen build:web build:storybook",
         "build:web": "next build",
         "build:storybook": "storybook build",
-        "codegen": "graphql-codegen",
+        "codegen": "run-p codegen:graphql codegen:wagmi",
+        "codegen:graphql": "graphql-codegen",
+        "codegen:wagmi": "wagmi generate",
         "dev": "run-p dev:codegen dev:web",
         "dev:codegen": "graphql-codegen -w",
         "dev:web": "next dev",
@@ -16,6 +18,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.10.5",
+        "@cartesi/rollups": "^1.4.0",
         "@deroll/core": "^0.1.1",
         "@mantine/core": "^7.10.2",
         "@mantine/form": "^7.10.2",
@@ -25,7 +28,7 @@
         "@tabler/icons-react": "^3.6.0",
         "@tanstack/react-query": "5.45.0",
         "@wagmi/core": "^2.11.2",
-        "@web3modal/wagmi": "^5.0.1",
+        "@web3modal/wagmi": "^5.0.2",
         "chess-fen": "^1.0.2",
         "chess.js": "1.0.0-beta.8",
         "encoding": "^0.1.13",
@@ -55,6 +58,7 @@
         "@storybook/react": "^8.1.9",
         "@storybook/react-vite": "^8.1.9",
         "@storybook/test": "^8.1.9",
+        "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@types/humanize-duration": "^3.27.4",
         "@types/node": "^20.14.2",
         "@types/react": "^18.3.3",
