--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,7 @@
     "name": "@onchess/core",
     "version": "0.0.0",
     "dependencies": {
+        "@cartesi/rollups": "^1.4.0",
         "@deroll/core": "^0.1.1",
         "@deroll/wallet": "^0.7.0",
         "@reduxjs/toolkit": "^2.2.5",
@@ -9,13 +10,18 @@
         "viem": "^2.14.1"
     },
     "devDependencies": {
+        "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@tsconfig/node20": "^20.1.4",
+        "@wagmi/cli": "^2.1.10",
+        "npm-run-all": "^4.1.5",
         "tsup": "^8.1.0",
         "typescript": "^5.4.5",
         "vitest": "^1.6.0"
     },
     "scripts": {
-        "build": "tsup",
+        "build": "run-s codegen compile",
+        "codegen": "wagmi generate",
+        "compile": "tsup",
         "dev": "tsup --watch",
         "test": "vitest"
     },
