--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
         "@wagmi/core": "^2.11.4",
         "@web3modal/wagmi": "^5.0.3",
         "@zerodev/permissions": "^5.3.0",
+        "@zerodev/sdk": "^5.3.1",
         "@zerodev/wallet": "^0.0.10",
         "chess-fen": "^1.0.2",
         "chess.js": "1.0.0-beta.8",
