--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,20 +17,20 @@
         "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
-        "@apollo/client": "^3.10.7",
+        "@apollo/client": "^3.10.8",
         "@cartesi/rollups": "^1.4.0",
         "@deroll/core": "^0.1.1",
-        "@mantine/core": "^7.11.0",
-        "@mantine/form": "^7.11.0",
-        "@mantine/hooks": "^7.11.0",
+        "@mantine/core": "^7.11.1",
+        "@mantine/form": "^7.11.1",
+        "@mantine/hooks": "^7.11.1",
         "@onchess/core": "workspace:*",
         "@raugfer/jazzicon": "^1.0.6",
-        "@reduxjs/toolkit": "^2.2.5",
-        "@tabler/icons-react": "^3.7.0",
-        "@tanstack/react-query": "^5.49.2",
+        "@reduxjs/toolkit": "^2.2.6",
+        "@tabler/icons-react": "^3.9.0",
+        "@tanstack/react-query": "^5.50.1",
         "@wagmi/core": "^2.11.6",
-        "@web3modal/wagmi": "^5.0.3",
-        "@zerodev/permissions": "^5.3.1",
+        "@web3modal/wagmi": "^5.0.6",
+        "@zerodev/permissions": "^5.3.2",
         "@zerodev/sdk": "^5.3.2",
         "@zerodev/wallet": "^0.1.3",
         "chess-fen": "^1.0.2",
@@ -45,24 +45,24 @@
         "react-dom": "^18.3.1",
         "react-fen-chess-board": "^2.0.6",
         "react-redux": "^9.1.2",
-        "viem": "2.17.0",
+        "viem": "^2.17.1",
         "wagmi": "^2.10.9"
     },
     "devDependencies": {
-        "@biomejs/biome": "^1.8.2",
+        "@biomejs/biome": "^1.8.3",
         "@graphql-codegen/cli": "^5.0.2",
-        "@graphql-codegen/client-preset": "^4.3.0",
+        "@graphql-codegen/client-preset": "^4.3.2",
         "@graphql-typed-document-node/core": "^3.2.0",
-        "@storybook/addon-essentials": "^8.1.10",
-        "@storybook/addon-interactions": "^8.1.10",
-        "@storybook/addon-links": "^8.1.10",
+        "@storybook/addon-essentials": "^8.1.11",
+        "@storybook/addon-interactions": "^8.1.11",
+        "@storybook/addon-links": "^8.1.11",
         "@storybook/addon-styling-webpack": "^1.0.0",
-        "@storybook/blocks": "^8.1.10",
-        "@storybook/nextjs": "^8.1.10",
-        "@storybook/preview-api": "^8.1.10",
-        "@storybook/react": "^8.1.10",
-        "@storybook/react-vite": "^8.1.10",
-        "@storybook/test": "^8.1.10",
+        "@storybook/blocks": "^8.1.11",
+        "@storybook/nextjs": "^8.1.11",
+        "@storybook/preview-api": "^8.1.11",
+        "@storybook/react": "^8.1.11",
+        "@storybook/react-vite": "^8.1.11",
+        "@storybook/test": "^8.1.11",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@types/humanize-duration": "^3.27.4",
         "@types/node": "^20.14.9",
@@ -72,11 +72,11 @@
         "buffer": "^6.0.3",
         "graphql": "^16.9.0",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.38",
+        "postcss": "^8.4.39",
         "postcss-preset-mantine": "^1.15.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.1.10",
+        "storybook": "^8.1.11",
         "storybook-dark-mode": "^4.0.2",
-        "typescript": "^5.5.2"
+        "typescript": "^5.5.3"
     }
 }
