--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,9 @@
         "@onchess/core": "workspace:*",
         "@raugfer/jazzicon": "^1.0.6",
         "@reduxjs/toolkit": "^2.2.6",
+        "@storybook/addon-styling-webpack": "^1.0.0",
+        "@storybook/manager-api": "^8.2.3",
+        "@storybook/theming": "^8.2.3",
         "@tabler/icons-react": "^3.9.0",
         "@tanstack/react-query": "^5.50.1",
         "@wagmi/core": "^2.11.6",
@@ -53,16 +56,15 @@
         "@graphql-codegen/cli": "^5.0.2",
         "@graphql-codegen/client-preset": "^4.3.2",
         "@graphql-typed-document-node/core": "^3.2.0",
-        "@storybook/addon-essentials": "^8.1.11",
-        "@storybook/addon-interactions": "^8.1.11",
-        "@storybook/addon-links": "^8.1.11",
-        "@storybook/addon-styling-webpack": "^1.0.0",
-        "@storybook/blocks": "^8.1.11",
-        "@storybook/nextjs": "^8.1.11",
-        "@storybook/preview-api": "^8.1.11",
-        "@storybook/react": "^8.1.11",
-        "@storybook/react-vite": "^8.1.11",
-        "@storybook/test": "^8.1.11",
+        "@storybook/addon-essentials": "^8.2.3",
+        "@storybook/addon-interactions": "^8.2.3",
+        "@storybook/addon-links": "^8.2.3",
+        "@storybook/blocks": "^8.2.3",
+        "@storybook/nextjs": "^8.2.3",
+        "@storybook/preview-api": "^8.2.3",
+        "@storybook/react": "^8.2.3",
+        "@storybook/react-vite": "^8.2.3",
+        "@storybook/test": "^8.2.3",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@types/humanize-duration": "^3.27.4",
         "@types/node": "^20.14.9",
@@ -75,7 +77,7 @@
         "postcss": "^8.4.39",
         "postcss-preset-mantine": "^1.15.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.1.11",
+        "storybook": "^8.2.3",
         "storybook-dark-mode": "^4.0.2",
         "typescript": "^5.5.3"
     }
