Coinbase Wallet Session Keys

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,28 +17,30 @@
         "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
-        "@apollo/client": "^3.11.4",
+        "@apollo/client": "^3.11.6",
         "@cartesi/rollups": "^1.4.0",
-        "@deroll/core": "^0.2.0",
-        "@mantine/core": "^7.12.1",
-        "@mantine/form": "^7.12.1",
-        "@mantine/hooks": "^7.12.1",
+        "@coinbase/wallet-sdk": "^4.1.0",
+        "@deroll/core": "^0.2.1",
+        "@mantine/core": "^7.12.2",
+        "@mantine/form": "^7.12.2",
+        "@mantine/hooks": "^7.12.2",
+        "@onchess/contracts": "workspace:*",
         "@onchess/core": "workspace:*",
         "@raugfer/jazzicon": "^1.0.6",
         "@reduxjs/toolkit": "^2.2.7",
-        "@tabler/icons-react": "^3.12.0",
-        "@tanstack/react-query": "^5.51.23",
+        "@tabler/icons-react": "^3.14.0",
+        "@tanstack/react-query": "^5.53.3",
         "@wagmi/core": "^2.13.4",
-        "@web3modal/wagmi": "^5.1.0",
-        "@zerodev/permissions": "^5.4.3",
-        "@zerodev/sdk": "^5.3.8",
+        "@web3modal/wagmi": "^5.1.5",
+        "@zerodev/permissions": "^5.4.5",
+        "@zerodev/sdk": "^5.3.12",
         "@zerodev/wallet": "^0.1.4",
         "chess-fen": "^1.0.2",
         "chess.js": "1.0.0-beta.8",
         "clsx": "^2.1.1",
         "encoding": "^0.1.13",
         "humanize-duration": "^3.32.1",
-        "next": "^14.2.5",
+        "next": "^14.2.7",
         "pino-pretty": "^11.2.2",
         "react": "^18.3.1",
         "react-chessboard": "^4.7.1",
@@ -46,7 +48,8 @@
         "react-fen-chess-board": "^2.0.6",
         "react-redux": "^9.1.2",
         "viem": "2.16.3",
-        "wagmi": "^2.12.5"
+        "wagmi": "^2.12.5",
+        "webauthn-p256": "^0.0.10"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.8.3",
@@ -67,14 +70,14 @@
         "@storybook/theming": "^8.2.9",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@types/humanize-duration": "^3.27.4",
-        "@types/node": "^22.4.0",
-        "@types/react": "^18.3.3",
+        "@types/node": "^22.5.2",
+        "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
         "@wagmi/cli": "^2.1.15",
         "buffer": "^6.0.3",
         "graphql": "^16.9.0",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.41",
+        "postcss": "^8.4.44",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
         "storybook": "^8.2.9",
