--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
         "turbo": "^2.0.7"
     },
     "packageManager": "pnpm@9.7.1",
+    "resolutions": {
+        "@coinbase/wallet-sdk": "npm:@lukasrosario/wallet-sdk@4.1.0-sessionkeys.2",
+        "viem": "npm:@lukasrosario/viem@2.17.4-sessionkeys.7",
+        "wagmi": "npm:@lukasrosario/wagmi@2.11.1-sessionkeys.6",
+        "webauthn-p256": "npm:@lukasrosario/webauthn-p256@0.0.10-sessionkeys.6"
+    },
     "engines": {
         "node": ">=18"
     }
