--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,21 +17,21 @@
         "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
-        "@apollo/client": "^3.11.1",
+        "@apollo/client": "^3.11.4",
         "@cartesi/rollups": "^1.4.0",
-        "@deroll/core": "^0.1.1",
-        "@mantine/core": "^7.11.2",
-        "@mantine/form": "^7.11.2",
-        "@mantine/hooks": "^7.11.2",
+        "@deroll/core": "^0.2.0",
+        "@mantine/core": "^7.12.1",
+        "@mantine/form": "^7.12.1",
+        "@mantine/hooks": "^7.12.1",
         "@onchess/core": "workspace:*",
         "@raugfer/jazzicon": "^1.0.6",
         "@reduxjs/toolkit": "^2.2.7",
-        "@tabler/icons-react": "^3.11.0",
-        "@tanstack/react-query": "^5.51.15",
-        "@wagmi/core": "^2.13.1",
-        "@web3modal/wagmi": "^5.0.8",
+        "@tabler/icons-react": "^3.12.0",
+        "@tanstack/react-query": "^5.51.23",
+        "@wagmi/core": "^2.13.4",
+        "@web3modal/wagmi": "^5.1.0",
         "@zerodev/permissions": "^5.4.3",
-        "@zerodev/sdk": "^5.3.4",
+        "@zerodev/sdk": "^5.3.8",
         "@zerodev/wallet": "^0.1.4",
         "chess-fen": "^1.0.2",
         "chess.js": "1.0.0-beta.8",
@@ -41,43 +41,43 @@
         "next": "^14.2.5",
         "pino-pretty": "^11.2.2",
         "react": "^18.3.1",
-        "react-chessboard": "^4.6.0",
+        "react-chessboard": "^4.7.1",
         "react-dom": "^18.3.1",
         "react-fen-chess-board": "^2.0.6",
         "react-redux": "^9.1.2",
-        "viem": "^2.18.2",
-        "wagmi": "^2.12.1"
+        "viem": "2.16.3",
+        "wagmi": "^2.12.5"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.8.3",
         "@graphql-codegen/cli": "^5.0.2",
-        "@graphql-codegen/client-preset": "^4.3.2",
+        "@graphql-codegen/client-preset": "^4.3.3",
         "@graphql-typed-document-node/core": "^3.2.0",
-        "@storybook/addon-essentials": "^8.2.6",
-        "@storybook/addon-interactions": "^8.2.6",
-        "@storybook/addon-links": "^8.2.6",
+        "@storybook/addon-essentials": "^8.2.9",
+        "@storybook/addon-interactions": "^8.2.9",
+        "@storybook/addon-links": "^8.2.9",
         "@storybook/addon-styling-webpack": "^1.0.0",
-        "@storybook/blocks": "^8.2.6",
-        "@storybook/manager-api": "^8.2.6",
-        "@storybook/nextjs": "^8.2.6",
-        "@storybook/preview-api": "^8.2.6",
-        "@storybook/react": "^8.2.6",
-        "@storybook/react-vite": "^8.2.6",
-        "@storybook/test": "^8.2.6",
-        "@storybook/theming": "^8.2.6",
+        "@storybook/blocks": "^8.2.9",
+        "@storybook/manager-api": "^8.2.9",
+        "@storybook/nextjs": "^8.2.9",
+        "@storybook/preview-api": "^8.2.9",
+        "@storybook/react": "^8.2.9",
+        "@storybook/react-vite": "^8.2.9",
+        "@storybook/test": "^8.2.9",
+        "@storybook/theming": "^8.2.9",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@types/humanize-duration": "^3.27.4",
-        "@types/node": "^20.14.12",
+        "@types/node": "^22.4.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@wagmi/cli": "^2.1.15",
         "buffer": "^6.0.3",
         "graphql": "^16.9.0",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.40",
+        "postcss": "^8.4.41",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.2.6",
+        "storybook": "^8.2.9",
         "storybook-dark-mode": "^4.0.2",
         "typescript": "^5.5.4"
     }
