--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -10,13 +10,13 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
+.env*
 *.suo
 *.ntvs*
 *.njsproj
