--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,68 +17,68 @@
         "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
-        "@apollo/client": "^3.11.4",
-        "@cartesi/rollups": "^1.4.0",
-        "@deroll/core": "^0.2.0",
-        "@mantine/core": "^7.12.1",
-        "@mantine/form": "^7.12.1",
-        "@mantine/hooks": "^7.12.1",
+        "@apollo/client": "^3.11.8",
+        "@cartesi/rollups": "^1.4.3",
+        "@deroll/core": "^1.0.0",
+        "@mantine/core": "^7.13.4",
+        "@mantine/form": "^7.13.4",
+        "@mantine/hooks": "^7.13.4",
         "@onchess/core": "workspace:*",
         "@raugfer/jazzicon": "^1.0.6",
-        "@reduxjs/toolkit": "^2.2.7",
-        "@tabler/icons-react": "^3.12.0",
-        "@tanstack/react-query": "^5.51.23",
-        "@wagmi/core": "^2.13.4",
-        "@web3modal/wagmi": "^5.1.0",
-        "@zerodev/permissions": "^5.4.3",
-        "@zerodev/sdk": "^5.3.8",
-        "@zerodev/wallet": "^0.1.4",
+        "@reduxjs/toolkit": "^2.3.0",
+        "@reown/appkit": "^1.2.0",
+        "@reown/appkit-adapter-wagmi": "^1.2.0",
+        "@tabler/icons-react": "^3.21.0",
+        "@tanstack/react-query": "^5.59.16",
+        "@wagmi/core": "^2.14.1",
+        "@zerodev/permissions": "^5.4.10",
+        "@zerodev/sdk": "^5.3.24",
+        "@zerodev/wallet": "^0.1.5",
         "chess-fen": "^1.0.2",
         "chess.js": "1.0.0-beta.8",
         "clsx": "^2.1.1",
         "encoding": "^0.1.13",
         "humanize-duration": "^3.32.1",
-        "next": "^14.2.5",
-        "pino-pretty": "^11.2.2",
+        "next": "^15.0.2",
+        "pino-pretty": "^11.3.0",
         "react": "^18.3.1",
-        "react-chessboard": "^4.7.1",
+        "react-chessboard": "^4.7.2",
         "react-dom": "^18.3.1",
         "react-fen-chess-board": "^2.0.6",
         "react-redux": "^9.1.2",
-        "viem": "2.16.3",
-        "wagmi": "^2.12.5"
+        "viem": ">=2.16.3 <2.18.0",
+        "wagmi": "2.12.25"
     },
     "devDependencies": {
-        "@biomejs/biome": "^1.8.3",
-        "@graphql-codegen/cli": "^5.0.2",
-        "@graphql-codegen/client-preset": "^4.3.3",
+        "@biomejs/biome": "^1.9.4",
+        "@graphql-codegen/cli": "^5.0.3",
+        "@graphql-codegen/client-preset": "^4.5.0",
         "@graphql-typed-document-node/core": "^3.2.0",
-        "@storybook/addon-essentials": "^8.2.9",
-        "@storybook/addon-interactions": "^8.2.9",
-        "@storybook/addon-links": "^8.2.9",
-        "@storybook/addon-styling-webpack": "^1.0.0",
-        "@storybook/blocks": "^8.2.9",
-        "@storybook/manager-api": "^8.2.9",
-        "@storybook/nextjs": "^8.2.9",
-        "@storybook/preview-api": "^8.2.9",
-        "@storybook/react": "^8.2.9",
-        "@storybook/react-vite": "^8.2.9",
-        "@storybook/test": "^8.2.9",
-        "@storybook/theming": "^8.2.9",
+        "@storybook/addon-essentials": "^8.4.0",
+        "@storybook/addon-interactions": "^8.4.0",
+        "@storybook/addon-links": "^8.4.0",
+        "@storybook/blocks": "^8.4.0",
+        "@storybook/manager-api": "^8.4.0",
+        "@storybook/nextjs": "^8.4.0",
+        "@storybook/preview-api": "^8.4.0",
+        "@storybook/react": "^8.4.0",
+        "@storybook/react-vite": "^8.4.0",
+        "@storybook/test": "^8.4.0",
+        "@storybook/theming": "^8.4.0",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@types/humanize-duration": "^3.27.4",
-        "@types/node": "^22.4.0",
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
-        "@wagmi/cli": "^2.1.15",
+        "@types/node": "^22.8.5",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@wagmi/cli": "^2.1.16",
         "buffer": "^6.0.3",
         "graphql": "^16.9.0",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.41",
+        "postcss": "^8.4.47",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.2.9",
+        "storybook": "^8.4.0",
         "storybook-dark-mode": "^4.0.2",
-        "typescript": "^5.5.4"
+        "typescript": "^5.6.3"
     }
 }
