--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,21 +2,21 @@
     "name": "@onchess/core",
     "version": "0.0.0",
     "dependencies": {
-        "@cartesi/rollups": "^1.4.0",
-        "@deroll/core": "^0.1.1",
-        "@deroll/wallet": "^0.7.0",
-        "@reduxjs/toolkit": "^2.2.5",
-        "chess.js": "1.0.0-beta.8",
-        "viem": "^2.16.2"
+        "@cartesi/rollups": "^1.4.5",
+        "@deroll/core": "^1.0.0",
+        "@deroll/wallet": "^1.0.0",
+        "@reduxjs/toolkit": "^2.6.1",
+        "chess.js": "1.2.0",
+        "viem": "^2.26.5"
     },
     "devDependencies": {
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
-        "@tsconfig/node20": "^20.1.4",
-        "@wagmi/cli": "^2.1.11",
+        "@tsconfig/node20": "^20.1.5",
+        "@wagmi/cli": "^2.2.1",
         "npm-run-all": "^4.1.5",
-        "tsup": "^8.1.0",
-        "typescript": "^5.5.2",
-        "vitest": "^1.6.0"
+        "tsup": "^8.4.0",
+        "typescript": "^5.8.3",
+        "vitest": "^3.1.1"
     },
     "scripts": {
         "build": "run-s codegen compile",
