--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,9 +3,9 @@
     "version": "0.0.0",
     "description": "OnChess backend",
     "dependencies": {
-        "@deroll/app": "^1.0.0",
+        "@deroll/app": "^2.0.0-alpha.1",
         "@onchess/core": "workspace:*",
-        "viem": "^2.21.37"
+        "viem": "catalog:"
     },
     "scripts": {
         "build": "tsc && esbuild ./src/index.ts --bundle --outfile=dist/index.js --platform=node --target=node20",
@@ -16,10 +16,10 @@
     ],
     "license": "MIT",
     "devDependencies": {
-        "@types/node": "^22.8.5",
-        "esbuild": "^0.24.0",
+        "@types/node": "catalog:",
+        "esbuild": "^0.25.4",
         "npm-run-all": "^4.1.5",
         "ts-node": "^10.9.2",
-        "typescript": "^5.6.3"
+        "typescript": "^5.8.3"
     }
 }
