--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,78 +7,70 @@
         "build": "run-s codegen build:web build:storybook",
         "build:web": "next build",
         "build:storybook": "storybook build",
-        "codegen": "run-p codegen:graphql codegen:wagmi",
-        "codegen:graphql": "graphql-codegen",
-        "codegen:wagmi": "wagmi generate",
-        "dev": "run-p dev:codegen dev:web",
-        "dev:codegen": "graphql-codegen -w",
-        "dev:web": "next dev",
+        "codegen": "wagmi generate",
+        "dev": "next dev",
         "lint": "biome check .",
         "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
-        "@apollo/client": "^3.11.8",
-        "@cartesi/rollups": "^1.4.3",
-        "@deroll/core": "^1.0.0",
-        "@mantine/core": "^7.13.4",
-        "@mantine/form": "^7.13.4",
-        "@mantine/hooks": "^7.13.4",
+        "@cartesi/viem": "2.0.0-alpha.7",
+        "@cartesi/wagmi": "2.0.0-alpha.7",
+        "@mantine/core": "^8.0.0",
+        "@mantine/form": "^8.0.0",
+        "@mantine/hooks": "^8.0.0",
         "@onchess/core": "workspace:*",
         "@raugfer/jazzicon": "^1.0.6",
-        "@reduxjs/toolkit": "^2.3.0",
-        "@reown/appkit": "^1.2.0",
-        "@reown/appkit-adapter-wagmi": "^1.2.0",
-        "@tabler/icons-react": "^3.21.0",
-        "@tanstack/react-query": "^5.59.16",
-        "@wagmi/core": "^2.14.1",
-        "@zerodev/permissions": "^5.4.10",
-        "@zerodev/sdk": "^5.3.24",
-        "@zerodev/wallet": "^0.1.5",
+        "@reduxjs/toolkit": "catalog:",
+        "@reown/appkit": "^1.7.4",
+        "@reown/appkit-adapter-wagmi": "^1.7.4",
+        "@tabler/icons-react": "^3.31.0",
+        "@tanstack/react-query": "^5.75.4",
+        "@wagmi/core": "^2.17.1",
+        "@zerodev/passkey-validator": "^5.5.4",
+        "@zerodev/permissions": "^5.5.5",
+        "@zerodev/sdk": "^5.4.34",
+        "@zerodev/webauthn-key": "^5.4.4",
+        "abitype": "^1.0.8",
         "chess-fen": "^1.0.2",
-        "chess.js": "1.0.0-beta.8",
+        "chess.js": "^1.2.0",
         "clsx": "^2.1.1",
         "encoding": "^0.1.13",
         "humanize-duration": "^3.32.1",
-        "next": "^15.0.2",
-        "pino-pretty": "^11.3.0",
-        "react": "^18.3.1",
-        "react-chessboard": "^4.7.2",
-        "react-dom": "^18.3.1",
+        "next": "^15.3.2",
+        "pino-pretty": "^13.0.0",
+        "react": "^19.1.0",
+        "react-chessboard": "^4.7.3",
+        "react-dom": "^19.1.0",
         "react-fen-chess-board": "^2.0.6",
-        "react-redux": "^9.1.2",
-        "viem": ">=2.16.3 <2.18.0",
-        "wagmi": "2.12.25"
+        "react-redux": "^9.2.0",
+        "viem": "catalog:",
+        "wagmi": "2.15.2"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
-        "@graphql-codegen/cli": "^5.0.3",
-        "@graphql-codegen/client-preset": "^4.5.0",
-        "@graphql-typed-document-node/core": "^3.2.0",
-        "@storybook/addon-essentials": "^8.4.0",
-        "@storybook/addon-interactions": "^8.4.0",
-        "@storybook/addon-links": "^8.4.0",
-        "@storybook/blocks": "^8.4.0",
-        "@storybook/manager-api": "^8.4.0",
-        "@storybook/nextjs": "^8.4.0",
-        "@storybook/preview-api": "^8.4.0",
-        "@storybook/react": "^8.4.0",
-        "@storybook/react-vite": "^8.4.0",
-        "@storybook/test": "^8.4.0",
-        "@storybook/theming": "^8.4.0",
-        "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
+        "@storybook/addon-essentials": "^8.6.12",
+        "@storybook/addon-interactions": "^8.6.12",
+        "@storybook/addon-links": "^8.6.12",
+        "@storybook/blocks": "^8.6.12",
+        "@storybook/manager-api": "^8.6.12",
+        "@storybook/nextjs": "^8.6.12",
+        "@storybook/preview-api": "^8.6.12",
+        "@storybook/react": "^8.6.12",
+        "@storybook/react-vite": "^8.6.12",
+        "@storybook/test": "^8.6.12",
+        "@storybook/theming": "^8.6.12",
         "@types/humanize-duration": "^3.27.4",
-        "@types/node": "^22.8.5",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
-        "@wagmi/cli": "^2.1.16",
+        "@types/node": "catalog:",
+        "@types/react": "^19.1.3",
+        "@types/react-dom": "^19.1.2",
+        "@wagmi/cli": "^2.3.0",
         "buffer": "^6.0.3",
-        "graphql": "^16.9.0",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.47",
+        "postcss": "^8.5.3",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.4.0",
+        "storybook": "^8.6.12",
         "storybook-dark-mode": "^4.0.2",
-        "typescript": "^5.6.3"
+        "typescript": "^5.8.3"
     }
 }
