--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,26 +2,23 @@
     "name": "@onchess/core",
     "version": "0.0.0",
     "dependencies": {
-        "@cartesi/rollups": "^1.4.5",
-        "@deroll/core": "^1.0.0",
-        "@deroll/wallet": "^1.0.0",
-        "@reduxjs/toolkit": "^2.6.1",
+        "@cartesi/viem": "2.0.0-alpha.7",
+        "@deroll/core": "^2.0.0-alpha.1",
+        "@deroll/wallet": "^2.0.0-alpha.1",
+        "@reduxjs/toolkit": "catalog:",
+        "abitype": "^1.0.8",
         "chess.js": "1.2.0",
-        "viem": "^2.26.5"
+        "viem": "catalog:"
     },
     "devDependencies": {
-        "@sunodo/wagmi-plugin-hardhat-deploy": "^0.3.0",
         "@tsconfig/node20": "^20.1.5",
-        "@wagmi/cli": "^2.2.1",
         "npm-run-all": "^4.1.5",
         "tsup": "^8.4.0",
         "typescript": "^5.8.3",
-        "vitest": "^3.1.1"
+        "vitest": "^3.1.3"
     },
     "scripts": {
-        "build": "run-s codegen compile",
-        "codegen": "wagmi generate",
-        "compile": "tsup",
+        "build": "tsup",
         "dev": "tsup --watch",
         "test": "vitest"
     },
