--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,11 +9,11 @@
     ],
     "devDependencies": {
         "@vercel/style-guide": "^6.0.0",
-        "eslint": "^9.7.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-config-turbo": "^2.0.7",
+        "eslint": "^9.26.0",
+        "eslint-config-prettier": "^10.1.2",
+        "eslint-config-turbo": "^2.5.3",
         "eslint-plugin-only-warn": "^1.1.0",
         "typescript": "^5.5.2",
-        "typescript-eslint": "rc-v8"
+        "typescript-eslint": "^8.32.0"
     }
 }
