--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,8 @@
 packages:
     - "apps/*"
     - "packages/*"
+
+catalog:
+    "@reduxjs/toolkit": ^2.8.0
+    "@types/node": ^22.15.14
+    viem: ^2.29.0
