--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,28 +15,30 @@
     "dependencies": {
         "@cartesi/viem": "2.0.0-alpha.7",
         "@cartesi/wagmi": "2.0.0-alpha.7",
-        "@mantine/core": "^8.0.0",
-        "@mantine/form": "^8.0.0",
-        "@mantine/hooks": "^8.0.0",
+        "@mantine/core": "^8.0.1",
+        "@mantine/form": "^8.0.1",
+        "@mantine/hooks": "^8.0.1",
         "@onchess/core": "workspace:*",
         "@raugfer/jazzicon": "^1.0.6",
         "@reduxjs/toolkit": "catalog:",
-        "@reown/appkit": "^1.7.4",
-        "@reown/appkit-adapter-wagmi": "^1.7.4",
-        "@tabler/icons-react": "^3.31.0",
-        "@tanstack/react-query": "^5.75.4",
-        "@wagmi/core": "^2.17.1",
-        "@zerodev/passkey-validator": "^5.5.4",
-        "@zerodev/permissions": "^5.5.5",
-        "@zerodev/sdk": "^5.4.34",
+        "@reown/appkit": "^1.7.6",
+        "@reown/appkit-adapter-wagmi": "^1.7.6",
+        "@tabler/icons-react": "^3.33.0",
+        "@tanstack/react-query": "^5.76.1",
+        "@wagmi/core": "^2.17.2",
+        "@zerodev/passkey-validator": "^5.5.5",
+        "@zerodev/permissions": "^5.5.7",
+        "@zerodev/sdk": "^5.4.35",
         "@zerodev/webauthn-key": "^5.4.4",
         "abitype": "^1.0.8",
         "chess-fen": "^1.0.2",
         "chess.js": "^1.2.0",
         "clsx": "^2.1.1",
         "encoding": "^0.1.13",
-        "humanize-duration": "^3.32.1",
+        "events": "^3.3.0",
+        "humanize-duration": "^3.32.2",
         "next": "^15.3.2",
+        "permissionless": "^0.2.47",
         "pino-pretty": "^13.0.0",
         "react": "^19.1.0",
         "react-chessboard": "^4.7.3",
@@ -44,32 +46,32 @@
         "react-fen-chess-board": "^2.0.6",
         "react-redux": "^9.2.0",
         "viem": "catalog:",
-        "wagmi": "2.15.2"
+        "wagmi": "2.15.4"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
-        "@storybook/addon-essentials": "^8.6.12",
-        "@storybook/addon-interactions": "^8.6.12",
-        "@storybook/addon-links": "^8.6.12",
-        "@storybook/blocks": "^8.6.12",
-        "@storybook/manager-api": "^8.6.12",
-        "@storybook/nextjs": "^8.6.12",
-        "@storybook/preview-api": "^8.6.12",
-        "@storybook/react": "^8.6.12",
-        "@storybook/react-vite": "^8.6.12",
-        "@storybook/test": "^8.6.12",
-        "@storybook/theming": "^8.6.12",
+        "@storybook/addon-essentials": "^8.6.14",
+        "@storybook/addon-interactions": "^8.6.14",
+        "@storybook/addon-links": "^8.6.14",
+        "@storybook/blocks": "^8.6.14",
+        "@storybook/manager-api": "^8.6.14",
+        "@storybook/nextjs": "^8.6.14",
+        "@storybook/preview-api": "^8.6.14",
+        "@storybook/react": "^8.6.14",
+        "@storybook/react-vite": "^8.6.14",
+        "@storybook/test": "^8.6.14",
+        "@storybook/theming": "^8.6.14",
         "@types/humanize-duration": "^3.27.4",
         "@types/node": "catalog:",
-        "@types/react": "^19.1.3",
-        "@types/react-dom": "^19.1.2",
-        "@wagmi/cli": "^2.3.0",
+        "@types/react": "^19.1.4",
+        "@types/react-dom": "^19.1.5",
+        "@wagmi/cli": "^2.3.1",
         "buffer": "^6.0.3",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.5.3",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
-        "storybook": "^8.6.12",
+        "storybook": "^8.6.14",
         "storybook-dark-mode": "^4.0.2",
         "typescript": "^5.8.3"
     }
