--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,9 @@ packages:
     - "packages/*"
 
 catalog:
-    "@reduxjs/toolkit": ^2.8.0
-    "@types/node": ^22.15.14
-    viem: ^2.29.0
+    "@reduxjs/toolkit": ^2.8.2
+    "@types/node": ^22.15.19
+    viem: ^2.29.4
+
+overrides:
+    "@coinbase/wallet-sdk": "canary"
